Ordering around composite macro-commands